added some bootstrap

--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -2,9 +2,9 @@ h1 {
     text-decoration: underline;
 }
 
-.highlight {
+/* .highlight {
     border: 2px solid red;
-}
+} */
 
 .red {
     color: red;
