added more bootstrap styling

--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -9,3 +9,13 @@ h1 {
 .red {
     color: red;
 }
+
+.center {
+    text-align: center;
+
+}
+
+.big-break {
+    display: block;
+    margin: 15px 0;
+}
